Add individual object movement requests

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -310,11 +310,11 @@
     "        try:\n",
     "            existingIndex = self.memory.index(objDef.previousVersion())\n",
     "            existingMem = self.memory[existingIndex]\n",
-    "            if (self.expectedChange is not None and existingMem == self.expectedChange.lastChange \n",
-    "                and self.overlappingChangeSets(self.expectedChange, objDef)\n",
+    "            if (existingMem.expectedChange is not None and existingMem == existingMem.expectedChange.lastChange \n",
+    "                and self.overlappingChangeSets(existingMem.expectedChange, objDef)\n",
     "            ):\n",
     "                print(f\"Requested Movement Fulfilled\")\n",
-    "                self.clearExpectedMovement()\n",
+    "                self.clearExpectedMovement(existingMem)\n",
     "            print(f\"Updating Memory {objDef.oid}\")\n",
     "            self.memory[existingIndex].update(objDef, overwrite=overwrite)\n",
     "            objDef = self.memory[existingIndex]\n",
@@ -611,6 +611,21 @@
     "                        center_y = int(np.mean(memContour[:, :, 1]))  # Mean of y-coordinates\n",
     "                        camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
     "\n",
+    "                if memObj.expectedChange is not None and memObj.expectedChange.changeSet[camName].changeType not in ['delete', None]:\n",
+    "                    memContour = np.array([memObj.expectedChange.changeSet[camName].changePoints], dtype=np.int32)\n",
+    "                    center_x = int(np.mean(memContour[:, :, 0]))  # Mean of x-coordinates\n",
+    "                    center_y = int(np.mean(memContour[:, :, 1]))  # Mean of y-coordinates\n",
+    "\n",
+    "                    objContour = np.array([memObj.expectedChange.lastChange.changeSet[camName].changePoints], dtype=np.int32)\n",
+    "                    obj_center_x = int(np.mean(objContour[:, :, 0]))  # Mean of x-coordinates\n",
+    "                    obj_center_y = int(np.mean(objContour[:, :, 1]))  # Mean of y-coordinates\n",
+    "                    camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
+    "                    camImage = cv2.line(\n",
+    "                        camImage,\n",
+    "                        np.array((center_x, center_y), dtype=np.int32),\n",
+    "                        np.array((obj_center_x, obj_center_y), dtype=np.int32),\n",
+    "                        (125, 255, 0), 5)\n",
+    "\n",
     "            # Paint last changes red\n",
     "            if self.lastChanges is not None and not self.lastChanges.empty:\n",
     "                lastChange = self.lastChanges.changeSet[camName]\n",
@@ -624,23 +639,6 @@
     "                if lastClass is not None and lastClass.changeType not in ['delete', None]:\n",
     "                    lastClassContour = np.array([lastClass.changePoints], dtype=np.int32)\n",
     "                    camImage = cv2.drawContours(camImage, lastClassContour, -1 , (0, 255, 0), -1)\n",
-    "\n",
-    "            if self.expectedChange is not None:\n",
-    "                if self.expectedChange.changeSet[camName].changeType not in ['delete', None]:\n",
-    "                    memContour = np.array([self.expectedChange.changeSet[camName].changePoints], dtype=np.int32)\n",
-    "                    center_x = int(np.mean(memContour[:, :, 0]))  # Mean of x-coordinates\n",
-    "                    center_y = int(np.mean(memContour[:, :, 1]))  # Mean of y-coordinates\n",
-    "\n",
-    "                    \n",
-    "                    objContour = np.array([self.expectedChange.lastChange.changeSet[camName].changePoints], dtype=np.int32)\n",
-    "                    obj_center_x = int(np.mean(objContour[:, :, 0]))  # Mean of x-coordinates\n",
-    "                    obj_center_y = int(np.mean(objContour[:, :, 1]))  # Mean of y-coordinates\n",
-    "                    camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
-    "                    camImage = cv2.line(\n",
-    "                        camImage,\n",
-    "                        np.array((center_x, center_y), dtype=np.int32),\n",
-    "                        np.array((obj_center_x, obj_center_y), dtype=np.int32),\n",
-    "                        (125, 255, 0), 5)\n",
     "\n",
     "            camImage = cv2.resize(camImage, [480, 640], interpolation=cv2.INTER_AREA)\n",
     "            images[camName] = camImage\n",
@@ -677,13 +675,19 @@
     "                    print(center_x, center_y)\n",
     "                    miniMap = cv2.circle(miniMap, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
     "\n",
-    "        if self.expectedChange is not None:\n",
-    "            miniMap = cv2.circle(miniMap, np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange), [x, y])], dtype=np.int32), radius=10, color=(125, 255, 0), thickness=-1)\n",
-    "            miniMap = cv2.line(\n",
-    "                miniMap,\n",
-    "                np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange), [x, y])], dtype=np.int32),\n",
-    "                np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange.lastChange), [x, y])], dtype=np.int32),\n",
-    "                (125, 255, 0), 5)\n",
+    "                if memObj.expectedChange is not None:\n",
+    "                    miniMap = cv2.circle(\n",
+    "                        miniMap,\n",
+    "                        np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(memObj.expectedChange), [x, y])], dtype=np.int32),\n",
+    "                        radius=10,\n",
+    "                        color=(125, 255, 0),\n",
+    "                        thickness=-1)\n",
+    "                    miniMap = cv2.line(\n",
+    "                        miniMap,\n",
+    "                        np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(memObj.expectedChange), [x, y])], dtype=np.int32),\n",
+    "                        np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(memObj.expectedChange.lastChange), [x, y])], dtype=np.int32),\n",
+    "                        (125, 255, 0), 5\n",
+    "                    )\n",
     "        return miniMap        \n",
     "    \n",
     "    def walkDirection(self, harmonyObject, direction: tuple[float, float], step_size=5):\n",
