--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -637,10 +637,6 @@
     "    def __init__(self, config: CalibratedCaptureConfiguration):\n",
     "        super().__init__(config)\n",
     "\n",
-    "    def reset(self):\n",
-    "        super().reset()\n",
-    "        self.expectedChange = None\n",
-    "\n",
     "    def buildMiniMap(self, objectsAndColors=None):\n",
     "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors)\n",
     "\n",
@@ -690,43 +686,7 @@
     "            [int(x + radius * np.cos(theta)), int(y + radius * np.sin(theta))]\n",
     "        ] for theta in angles], dtype=np.int32)\n",
     "    \n",
-    "        return contour\n",
-    "    \n",
-    "    def expectObjectMovement(self, trackedObject: TrackedObject, expectedFinalLocation: tuple[int, int]):\n",
-    "        # Pass convert expectedFinalLocation to camera coords\n",
-    "        finalCamCoords = {cN: self.cc.rsc.realSpaceToCamCoord(expectedFinalLocation, cN) for cN in self.cc.cameras.keys()}\n",
-    "        # Determine the expected camera change\n",
-    "        self.expectedChange = ChangeSet(changeSet={cN: \n",
-    "            CameraChange(\n",
-    "                camName=cN,\n",
-    "                changeContours=[self.circle_to_contour(finalCamCoords[cN], radius=10)],\n",
-    "                before=np.zeros([100, 100, 3], dtype=\"uint8\"),\n",
-    "                after=np.zeros([100, 100, 3], dtype=\"uint8\"),\n",
-    "                changeType=\"Add\",\n",
-    "                lastChange=None\n",
-    "            ) for cN in self.cc.cameras.keys()})\n",
-    "        self.expectedChange.lastChange = trackedObject\n",
-    "\n",
-    "    def clearExpectedMovement(self):\n",
-    "        self.expectedChange = None\n",
-    "\n",
-    "    def overlappingChangeSets(self, obj0: ChangeSet, obj1: ChangeSet):\n",
-    "        print(f\"Comparing: {obj0} to {obj1}\")\n",
-    "        for camName, obj0_cameraChange in obj0.changeSet.items():\n",
-    "            obj1_cameraChange = obj1.changeSet[camName]\n",
-    "            if obj0_cameraChange.changeType in [\"delete\", None] or obj1_cameraChange.changeType in [\"delete\", None]:\n",
-    "                continue\n",
-    "            if not obj0_cameraChange.changeOverlap(obj1_cameraChange):\n",
-    "                print(f\"{obj0_cameraChange} != {obj1_cameraChange}\")\n",
-    "                return False\n",
-    "\n",
-    "        print(f\"ChangeSets overlap!\")\n",
-    "        return True\n",
-    "\n",
-    "    def commitChanges(self, objDef, overwrite=True):\n",
-    "        if self.expectedChange is not None and not self.overlappingChangeSets(self.expectedChange, objDef):\n",
-    "            print(f\"Change is not in expected location\")\n",
-    "        return super().commitChanges(objDef, overwrite)"
+    "        return contour"
    ]
   },
   {
