--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -524,6 +524,7 @@
     "@dataclass\n",
     "class TrackedObject(ChangeSet):\n",
     "    oid: str = None\n",
+    "    expectedChange: ChangeSet | None = None\n",
     "    \n",
     "    def __eq__(self, other):\n",
     "        return super().__eq__(other)\n",
@@ -800,6 +801,9 @@
     "            raise Exception(f\"Cam {self.camName} - Unrecognzed changeType: {classifiedChange}\")\n",
     "\n",
     "    def commitChanges(self, objDef, overwrite=True):\n",
+    "        if self.expectedChange is not None and not self.overlappingChangeSets(self.expectedChange, objDef):\n",
+    "            print(f\"Change is not in expected location\")\n",
+    "\n",
     "        try:\n",
     "            existingIndex = self.memory.index(objDef.previousVersion())\n",
     "            print(f\"Updating Memory {existingIndex}\")\n",
@@ -977,7 +981,38 @@
     "        if not changeSet.empty:\n",
     "            return hStackImages(images)\n",
     "        else:\n",
-    "            return np.zeros([10, 10], dtype=\"float32\")"
+    "            return np.zeros([10, 10], dtype=\"float32\")\n",
+    "\n",
+    "    def expectObjectMovement(self, trackedObject: TrackedObject, expectedFinalLocation: tuple[int, int]):\n",
+    "        # Pass convert expectedFinalLocation to camera coords\n",
+    "        finalCamCoords = {cN: self.cc.rsc.realSpaceToCamCoord(expectedFinalLocation, cN) for cN in self.cc.cameras.keys()}\n",
+    "        # Determine the expected camera change\n",
+    "        trackedObject.expectedChange = ChangeSet(changeSet={cN: \n",
+    "            CameraChange(\n",
+    "                camName=cN,\n",
+    "                changeContours=[self.circle_to_contour(finalCamCoords[cN], radius=10)],\n",
+    "                before=np.zeros([100, 100, 3], dtype=\"uint8\"),\n",
+    "                after=np.zeros([100, 100, 3], dtype=\"uint8\"),\n",
+    "                changeType=\"Add\",\n",
+    "                lastChange=None\n",
+    "            ) for cN in self.cc.cameras.keys()})\n",
+    "        trackedObject.expectedChange.lastChange = trackedObject\n",
+    "\n",
+    "    def clearExpectedMovement(self, trackedObject: TrackedObject):\n",
+    "        trackedObject.expectedChange = None\n",
+    "\n",
+    "    def overlappingChangeSets(self, obj0: ChangeSet, obj1: ChangeSet):\n",
+    "        print(f\"Comparing: {obj0} to {obj1}\")\n",
+    "        for camName, obj0_cameraChange in obj0.changeSet.items():\n",
+    "            obj1_cameraChange = obj1.changeSet[camName]\n",
+    "            if obj0_cameraChange.changeType in [\"delete\", None] or obj1_cameraChange.changeType in [\"delete\", None]:\n",
+    "                continue\n",
+    "            if not obj0_cameraChange.changeOverlap(obj1_cameraChange):\n",
+    "                print(f\"{obj0_cameraChange} != {obj1_cameraChange}\")\n",
+    "                return False\n",
+    "\n",
+    "        print(f\"ChangeSets overlap!\")\n",
+    "        return True"
    ]
   },
   {
