--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -282,8 +282,7 @@
     "            for frame in range(self.CAPTURE_FRAMES):\n",
     "                ret, cv2_im = cap.read()\n",
     "                sleep(delay)\n",
-    "            image = sr.upsample(cv2_im)\n",
-    "            self.imageBuffer.insert(0, image)\n",
+    "            self.imageBuffer.insert(0, cv2_im)\n",
     "            self.imageBuffer.pop()\n",
     "        except Exception as e:\n",
     "            print(f\"Failed to capture Camera: {e}\")\n",
@@ -801,9 +800,6 @@
     "            raise Exception(f\"Cam {self.camName} - Unrecognzed changeType: {classifiedChange}\")\n",
     "\n",
     "    def commitChanges(self, objDef, overwrite=True):\n",
-    "        if self.expectedChange is not None and not self.overlappingChangeSets(self.expectedChange, objDef):\n",
-    "            print(f\"Change is not in expected location\")\n",
-    "\n",
     "        try:\n",
     "            existingIndex = self.memory.index(objDef.previousVersion())\n",
     "            print(f\"Updating Memory {existingIndex}\")\n",
