--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -11,15 +11,16 @@
     "from functools import partial\n",
     "from datetime import datetime\n",
     "\n",
-    "from importnb import Notebook\n",
-    "with Notebook():\n",
-    "    from quantumsystem import *\n",
-    "    from MovementSystem import *\n",
-    "    from DamageSystem import *\n",
-    "    from WeaponsSystem import *\n",
-    "    from StructureSystem import *\n",
-    "    from MechSystem import *\n",
-    "    from GameEventSystem import *"
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "from ipynb.fs.full.quantumsystem import *\n",
+    "from ipynb.fs.full.MovementSystem import *\n",
+    "from ipynb.fs.full.DamageSystem import *\n",
+    "from ipynb.fs.full.WeaponsSystem import *\n",
+    "from ipynb.fs.full.StructureSystem import *\n",
+    "from ipynb.fs.full.MechSystem import *\n",
+    "from ipynb.fs.full.GameEventSystem import *"
    ]
   },
   {
@@ -1408,7 +1409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
