--- a/harmony/dma/MechaCombat/WeaponsSystem.ipynb
+++ b/harmony/dma/MechaCombat/WeaponsSystem.ipynb
@@ -2,15 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "eba7b8da-29ca-40dd-b2d4-9e5b55f1a1c4",
+   "execution_count": null,
+   "id": "d9873972-bfa1-439b-9566-748b7e04bdf2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importnb import Notebook\n",
-    "with Notebook():\n",
-    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, MetaSystem, IntegerSystem\n",
-    "    from MovementSystem import XYLocation, Elevation"
+    "import os\n",
+    "import json\n",
+    "\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "from ipynb.fs.full.quantumsystem import QuantumSystem, qs, System, HyperSystem, MetaSystem, IntegerSystem\n",
+    "from ipynb.fs.full.MovementSystem import XYLocation, Elevation"
    ]
   },
   {
@@ -438,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
