--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -28,13 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "602edeb2-f084-41b8-a6cf-a2973e33c8f2",
+   "id": "48c2a8b3-d13f-4849-b0c4-9d8771ed6436",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importnb import Notebook\n",
-    "with Notebook():\n",
-    "    from Observer import Observer, CaptureConfiguration, CameraChange, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition, clipImage"
+    "from ipynb.fs.full.Observer import Observer, CaptureConfiguration, CameraChange, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition, clipImage"
    ]
   },
   {
@@ -747,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
