--- a/harmony/dma/MechaCombat/DamageSystem.ipynb
+++ b/harmony/dma/MechaCombat/DamageSystem.ipynb
@@ -9,9 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "from importnb import Notebook\n",
-    "with Notebook():\n",
-    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, IntegerArraySystem"
+    "from ipynb.fs.full.quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, IntegerArraySystem"
    ]
   },
   {
@@ -496,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
