--- a/harmony/dma/MechaCombat/MechSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechSystem.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "eb9c940a-2df5-4f94-8934-f5a43c60bef2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "\n",
     "import numpy as np\n",
     "import cv2\n",
     "\n",
-    "from importnb import Notebook\n",
-    "with Notebook():\n",
-    "    from quantumsystem import qs, System, HyperSystem, IntegerSystem\n",
-    "    from DamageSystem import Armor, UnitDamage\n",
-    "    from MovementSystem import Movement, MovementSpeed, Footprint, Elevation, XYLocation\n",
-    "    from WeaponsSystem import Weapons\n",
-    "    from FactionSystem import Faction"
+    "from ipynb.fs.full.quantumsystem import qs, System, HyperSystem, IntegerSystem\n",
+    "from ipynb.fs.full.DamageSystem import Armor, UnitDamage\n",
+    "from ipynb.fs.full.MovementSystem import Movement, MovementSpeed, Footprint, Elevation, XYLocation\n",
+    "from ipynb.fs.full.WeaponsSystem import Weapons\n",
+    "from ipynb.fs.full.FactionSystem import Faction"
    ]
   },
   {
@@ -2062,7 +2061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
