--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -19,9 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from importnb import Notebook\n",
-    "with Notebook():\n",
-    "    from quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, FloatSystem, FloatArraySystem"
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "from ipynb.fs.full.quantumsystem import QuantumSystem, qs, System, HyperSystem, IntegerSystem, FloatSystem, FloatArraySystem"
    ]
   },
   {
@@ -533,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
