--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -592,8 +592,8 @@
     "            raise Exception(\"NoConfigurationFile\")\n",
     "        return config\n",
     "    \n",
-    "    def loadConfiguration(self):\n",
-    "        for camName, camDef in self.readConfigFile().items():\n",
+    "    def loadConfiguration(self, path=\"observerConfiguration.json\"):\n",
+    "        for camName, camDef in self.readConfigFile(path).items():\n",
     "            if str(camName) == \"pov\":\n",
     "                global pov\n",
     "                addr = camDef['addr']\n",
