Functional hex observer

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -396,7 +396,7 @@
     "        return self.lastMemory\n",
     "            \n",
     "    def __repr__(self):\n",
-    "        return f\"CalibMac -- {self.mode}{'' if self.mode == 'passive' else '-'+self.dowel_position} - {self.state} (#T:{len(self.transitions)})\"\n"
+    "        return f\"CalibMac -- {self.mode}{'' if self.mode == 'passive' else '-'+self.dowel_position} - {self.state} (#T:{len(self.transitions)})\""
    ]
   },
   {
