Functional hex observer and server

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -591,6 +591,7 @@
     "class CalibratedObserver(Observer):\n",
     "    def __init__(self, config: CalibratedCaptureConfiguration):\n",
     "        super().__init__(config)\n",
+    "        self.objectsAndColors = []\n",
     "\n",
     "    def buildMiniMap(self, objectsAndColors=None):\n",
     "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors)\n",
