--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -593,8 +593,39 @@
     "        super().__init__(config)\n",
     "        self.objectsAndColors = []\n",
     "\n",
+    "    def distinct_colors(self, n=15, new=False):\n",
+    "        \"\"\" Generate n distinct colors that stand out against brown. \"\"\"\n",
+    "        if not new and n > 0 and len(getattr(self, \"_colors\", {n: 0})[n]) == n:\n",
+    "            return self._colors[n]\n",
+    "        colors = set()\n",
+    "        contrast_colors = [(139, 69, 19), (204, 100, 2), (0, 255, 0)]\n",
+    "        calc_contrast = lambda r, g, b, bg: abs(r - bg[0]) + abs(g - bg[1]) + abs(b - bg[2])\n",
+    "        while len(colors) < n:\n",
+    "            color = None\n",
+    "            for i in range(100):\n",
+    "                r, g, b = (random.randint(50, 230) for _ in range(3))  # Exclude near black/white\n",
+    "                contrasts = [calc_contrast(r, g, b, c) for c in contrast_colors + list(colors)]\n",
+    "                if sum([contrast > 200 for contrast in contrasts]) >= len(contrast_colors + list(colors)):  # Ensure high contrast\n",
+    "                    color = (r, g, b)\n",
+    "                    break\n",
+    "            if color is None:\n",
+    "                raise Exception(f\"Failed to generate color within 100 cycles\")\n",
+    "            colors.add((r, g, b))\n",
+    "        self._colors = getattr(self, \"_colors\", {})\n",
+    "        self._colors[n] = list(colors)\n",
+    "        return self._colors[n]\n",
+    "\n",
+    "    @property\n",
+    "    def objectsAndColors(self):\n",
+    "        memColors = {mem.oid: color for mem, color in zip(self.memory, self.distinct_colors(len(self.memory)))}\n",
+    "        return [\n",
+    "            MiniMapObject(\n",
+    "                mem,\n",
+    "                memColors[mem.oid]\n",
+    "            ) for mem in self.memory]\n",
+    "\n",
     "    def buildMiniMap(self, objectsAndColors=None):\n",
-    "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors)\n",
+    "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors or self.objectsAndColors)\n",
     "\n",
     "    def object_visual(self, changeSet: ChangeSet, withContours=True, margin=0):\n",
     "        if changeSet.empty:\n",
