Fix virtual map selected pixel

--- a/observer/HexObserver.ipynb
+++ b/observer/HexObserver.ipynb
@@ -423,6 +423,27 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-4 (_capture_loop):\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"/nix/store/kfr5j63aw8xyb17s91vd18y1356rxzbj-python3-3.13.9-env/lib/python3.13/threading.py\"\u001b[0m, line \u001b[35m1043\u001b[0m, in \u001b[35m_bootstrap_inner\u001b[0m\n",
+      "    \u001b[31mself.run\u001b[0m\u001b[1;31m()\u001b[0m\n",
+      "    \u001b[31m~~~~~~~~\u001b[0m\u001b[1;31m^^\u001b[0m\n",
+      "  File \u001b[35m\"/nix/store/kfr5j63aw8xyb17s91vd18y1356rxzbj-python3-3.13.9-env/lib/python3.13/site-packages/ipykernel/ipkernel.py\"\u001b[0m, line \u001b[35m772\u001b[0m, in \u001b[35mrun_closure\u001b[0m\n",
+      "    \u001b[31m_threading_Thread_run\u001b[0m\u001b[1;31m(self)\u001b[0m\n",
+      "    \u001b[31m~~~~~~~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/nix/store/kfr5j63aw8xyb17s91vd18y1356rxzbj-python3-3.13.9-env/lib/python3.13/threading.py\"\u001b[0m, line \u001b[35m994\u001b[0m, in \u001b[35mrun\u001b[0m\n",
+      "    \u001b[31mself._target\u001b[0m\u001b[1;31m(*self._args, **self._kwargs)\u001b[0m\n",
+      "    \u001b[31m~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/home/musengdir/harmony/observer/Observer.ipynb\"\u001b[0m, line \u001b[35m510\u001b[0m, in \u001b[35m_capture_loop\u001b[0m\n",
+      "    \"        \\\"\\\"\\\"\\n\",\n",
+      "    \n",
+      "\u001b[1;35mAttributeError\u001b[0m: \u001b[35m'builtin_function_or_method' object has no attribute 'sleep'\u001b[0m\n"
+     ]
     }
    ],
    "source": [
@@ -445,27 +466,6 @@
     "    img = hc.griddleCameras(objectsAndColors=[MiniMapObject(mem, (255, 0, 0)) for mem in co.memory])['0']\n",
     "    cv2.fillPoly(img, [poly], (0, 0, 255))\n",
     "    plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b39a964f-9ff1-4938-a2a4-f53c65eb7cd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-2, 6)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hc.pixel_to_axial(350, 56)"
    ]
   },
   {
