--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -565,7 +565,6 @@
     "            while not self._stop_evt.is_set():\n",
     "                if not cap.isOpened():\n",
     "                    cap.release()\n",
-    "                    time.sleep(0.25)\n",
     "                    cap = self._open_cap()\n",
     "                    continue\n",
     "\n",
@@ -574,11 +573,11 @@
     "                    # If we fail for a while, reopen the stream\n",
     "                    if time() - last_ok > 2.0:\n",
     "                        cap.release()\n",
-    "                        time.sleep(0.25)\n",
+    "                        sleep(0.25)\n",
     "                        cap = self._open_cap()\n",
     "                        last_ok = time()\n",
     "                    else:\n",
-    "                        time.sleep(0.01)\n",
+    "                        sleep(0.01)\n",
     "                    continue\n",
     "\n",
     "                last_ok = time()\n",
