Functional grid interface

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -10,7 +10,8 @@
     "from time import sleep\n",
     "from dataclasses import dataclass\n",
     "from collections import defaultdict\n",
-    "from math import cos, acos, degrees, radians"
+    "from math import cos, acos, degrees, radians\n",
+    "import random"
    ]
   },
   {
@@ -594,7 +595,7 @@
     "\n",
     "    def distinct_colors(self, n=15, new=False):\n",
     "        \"\"\" Generate n distinct colors that stand out against brown. \"\"\"\n",
-    "        if not new and n > 0 and len(getattr(self, \"_colors\", {n: 0})[n]) == n:\n",
+    "        if not new and n > 0 and len(getattr(self, \"_colors\", {n: []})[n]) == n:\n",
     "            return self._colors[n]\n",
     "        colors = set()\n",
     "        contrast_colors = [(139, 69, 19), (204, 100, 2), (0, 255, 0)]\n",
