--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "2a17dcee-60c4-4f16-b21d-15cf46e5f597",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "22e62281-4a03-4b5a-9ed8-35658b567913",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ae0fc0e2-68b4-445c-a132-c3d033ceeb8d",
    "metadata": {
     "tags": []
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "0746d996-7e39-43e0-87c3-ac76ef2effbc",
    "metadata": {
     "tags": []
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "213cb2d2-24c4-40a6-981e-9cc14e4238ec",
    "metadata": {
     "tags": []
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b0ce0836-ce81-4e6c-9821-1bda4241462b",
    "metadata": {
     "tags": []
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "9efb5a2b-c183-4460-b829-6cfd60038c0f",
    "metadata": {},
    "outputs": [],
@@ -704,14 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "47c5e5b7-70ee-4b05-a997-8e2a260bde01",
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass\n",
     "class ChangeSet:\n",
-    "    changeSet: dict\n",
+    "    changeSet: dict[str, CameraChange]\n",
     "    \n",
     "    @property\n",
     "    def numCamerasChanged(self):\n",
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "c37f5df8-5efb-417d-a3c6-8db6ce3064fd",
    "metadata": {},
    "outputs": [],
@@ -839,7 +839,7 @@
     "                auth = camDef.get(\"auth\", None)\n",
     "                az = np.float32(json.loads(camDef['az']))\n",
     "                cameras[name] = RTSPCamera(address=addr, activeZone=az, camName=name, auth=auth)\n",
-    "            elif str(camName) not in ['rsc', 'calibrationPlan']:\n",
+    "            elif str(camName) not in ['rsc', 'calibrationPlan', 'hex']:\n",
     "                addr = camDef['addr']\n",
     "                rot = camDef['rot']\n",
     "                auth = camDef.get(\"auth\", None)\n",
@@ -1291,7 +1291,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "bf855930-4d24-4808-ad39-5d46d5ecdc9d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
