Create new capture config on not found or other error

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -813,7 +813,10 @@
    "source": [
     "class CaptureConfiguration:\n",
     "    def __init__(self):\n",
-    "        self.loadConfiguration()\n",
+    "        try:\n",
+    "            self.loadConfiguration()\n",
+    "        except Exception:\n",
+    "            print(\"Creating new configuration\")\n",
     "        self.cameras = cameras\n",
     "\n",
     "    def readConfigFile(self, path=\"observerConfiguration.json\"):\n",
