Change no config error handling

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -813,10 +813,7 @@
    "source": [
     "class CaptureConfiguration:\n",
     "    def __init__(self):\n",
-    "        try:\n",
-    "            self.loadConfiguration()\n",
-    "        except Exception:\n",
-    "            print(\"Creating new configuration\")\n",
+    "        self.loadConfiguration()\n",
     "        self.cameras = cameras\n",
     "\n",
     "    def readConfigFile(self, path=\"observerConfiguration.json\"):\n",
@@ -829,6 +826,12 @@
     "        return config\n",
     "    \n",
     "    def loadConfiguration(self, path=\"observerConfiguration.json\"):\n",
+    "        try:\n",
+    "            config = self.readConfigFile(path)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Unable to read configuration at {path}: {e}\")\n",
+    "            config = {}\n",
+    "\n",
     "        for camName, camDef in self.readConfigFile(path).items():\n",
     "            if str(camName) == \"pov\":\n",
     "                global pov\n",
