--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -832,7 +832,7 @@
     "            print(f\"Unable to read configuration at {path}: {e}\")\n",
     "            config = {}\n",
     "\n",
-    "        for camName, camDef in self.readConfigFile(path).items():\n",
+    "        for camName, camDef in config.items():\n",
     "            if str(camName) == \"pov\":\n",
     "                global pov\n",
     "                addr = camDef['addr']\n",
