Add readConfig error handling

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -478,7 +478,10 @@
     "\n",
     "    def loadConfiguration(self):\n",
     "        super().loadConfiguration()\n",
-    "        config = self.readConfigFile()\n",
+    "        try:\n",
+    "            config = self.readConfigFile()\n",
+    "        except Exception:\n",
+    "            config = {}\n",
     "        self.rsc = config.get(\"rsc\", None)\n",
     "        self.realSpaceContours = None\n",
     "        if self.rsc is not None:\n",
