--- a/observer/HexObserver.ipynb
+++ b/observer/HexObserver.ipynb
@@ -50,7 +50,10 @@
     "class HexCaptureConfiguration(CalibratedCaptureConfiguration):\n",
     "    def loadConfiguration(self):\n",
     "        super().loadConfiguration()\n",
-    "        config = self.readConfigFile()\n",
+    "        try:\n",
+    "            config = self.readConfigFile()\n",
+    "        except Exception:\n",
+    "            config = {}\n",
     "        self.hex = config.get(\"hex\", None)\n",
     "        if self.hex is not None:\n",
     "            self.hex = HexGridConfiguration(**self.hex)\n",
