Fix grid configuration settings; infer anchor xy

--- a/observer/HexObserver.ipynb
+++ b/observer/HexObserver.ipynb
@@ -37,7 +37,10 @@
     "    offset_xy: tuple = (0, 0)\n",
     "    anchor_xy: tuple = (-12, -19)\n",
     "    width: int = 1600\n",
-    "    height: int = 1600"
+    "    height: int = 1600\n",
+    "\n",
+    "    def __post_init__(self):\n",
+    "        self.anchor_xy = (-int(self.size / 2.86), -int(self.size / 2))"
    ]
   },
   {
