Transparent object footprint in object table

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -631,6 +631,7 @@
     "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors or self.objectsAndColors)\n",
     "\n",
     "    def object_visual(self, changeSet: ChangeSet, withContours=True, margin=0):\n",
+    "        cameras = self.cc.cameras\n",
     "        if changeSet.empty:\n",
     "            return np.zeros([10, 10], dtype=\"float32\")\n",
     "\n",
@@ -652,9 +653,21 @@
     "                images[camName] = filler\n",
     "            else:\n",
     "                if withContours:\n",
-    "                    images[camName] = clipImage(cv2.drawContours(\n",
-    "                        self.cc.cameras[camName].mostRecentFrame.copy(),\n",
-    "                        change.changeContours, -1, (255, 0, 0), -1), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
+    "                    images[camName] = clipImage(cv2.addWeighted(\n",
+    "                            cameras[camName].mostRecentFrame.copy(),\n",
+    "                            0.6,\n",
+    "                            cv2.drawContours(\n",
+    "                                cameras[camName].mostRecentFrame.copy(),\n",
+    "                                change.changeContours, \n",
+    "                                -1,\n",
+    "                                (255, 0, 0),\n",
+    "                                -1\n",
+    "                            ),\n",
+    "                            0.4,\n",
+    "                            0\n",
+    "                        ),\n",
+    "                        [dim + m for dim, m in zip(change.clipBox, margins)]\n",
+    "                    )\n",
     "                else:\n",
     "                    images[camName] = clipImage(self.cc.cameras[camName].mostRecentFrame.copy(), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
     "\n",
