--- a/observer/HexObserver.ipynb
+++ b/observer/HexObserver.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "class HexCaptureConfiguration(CalibratedCaptureConfiguration):\n",
-    "    def loadConfiguration(self):\n",
+    "    def loadConfiguration(self, path=\"observerConfiguration.json\"):\n",
     "        super().loadConfiguration()\n",
     "        try:\n",
     "            config = self.readConfigFile()\n",
