Client-side graphics

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -628,7 +628,7 @@
     "            ) for mem in self.memory]\n",
     "\n",
     "    def buildMiniMap(self, objectsAndColors=None):\n",
-    "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or self.objectsAndColors or self.objectsAndColors)\n",
+    "        return self.cc.buildMiniMap(objectsAndColors=objectsAndColors or [])\n",
     "\n",
     "    def object_visual(self, changeSet: ChangeSet, withContours=True, margin=0):\n",
     "        cameras = self.cc.cameras\n",
