--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -159,7 +159,7 @@
     "            self.after = None\n",
     "        else:\n",
     "            self.area = max([cv2.contourArea(c) for c in self.changeContours])\n",
-    "            self.changePoints = np.array([pt for c in self.changeContours for d in c for pt in d], dtype=\"float32\")\n",
+    "            self.changePoints = [pt.tolist() for c in self.changeContours for d in c for pt in d]\n",
     "            xS = [pt[0] for pt in self.changePoints]\n",
     "            yS = [pt[1] for pt in self.changePoints]\n",
     "            minX = max(min(xS) - 5, 0)\n",
@@ -181,7 +181,7 @@
     "    def overrideChangeContours(self, newContours):\n",
     "        self.changeContours = newContours\n",
     "        self.area = max([cv2.contourArea(c) for c in self.changeContours])\n",
-    "        self.changePoints = np.array([pt for c in self.changeContours for d in c for pt in d], dtype=\"float32\")\n",
+    "        self.changePoints = [pt.tolist() for c in self.changeContours for d in c for pt in d]\n",
     "        xS = [pt[0] for pt in self.changePoints]\n",
     "        yS = [pt[1] for pt in self.changePoints]\n",
     "        minX = max(min(xS) - 5, 0)\n",
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "47c5e5b7-70ee-4b05-a997-8e2a260bde01",
    "metadata": {},
    "outputs": [],
@@ -743,7 +743,6 @@
     "            sum([notNoneChanges[camName] == other.changeSet[camName] for camName in notNoneChanges.keys()]) / len(notNoneChanges) >= 0.3\n",
     "        \n",
     "    def update(self, changeSet, overwrite=True):\n",
-    "        print(f\"In update: overwrite - {overwrite}\")\n",
     "        if overwrite:\n",
     "            self.changeSet = changeSet.changeSet\n",
     "        else:\n",
@@ -933,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3baf65fa-1ff6-4b83-948f-b403afc33e18",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1108,6 @@
     "        minimumClassificationTime = 2\n",
     "        cycleStart = datetime.utcnow()\n",
     "        try:\n",
-    "            print(f\"Starting Cycle {self.cycleStatus()}\")\n",
     "            nextState = \"idle\"\n",
     "            self.cc.capture()\n",
     "            changes = self.referenceFrameDeltas()\n",
@@ -1255,16 +1253,13 @@
     "        trackedObject.expectedChange = None\n",
     "\n",
     "    def overlappingChangeSets(self, obj0: ChangeSet, obj1: ChangeSet):\n",
-    "        print(f\"Comparing: {obj0} to {obj1}\")\n",
     "        for camName, obj0_cameraChange in obj0.changeSet.items():\n",
     "            obj1_cameraChange = obj1.changeSet[camName]\n",
     "            if obj0_cameraChange.changeType in [\"delete\", None] or obj1_cameraChange.changeType in [\"delete\", None]:\n",
     "                continue\n",
     "            if not obj0_cameraChange.changeOverlap(obj1_cameraChange):\n",
-    "                print(f\"{obj0_cameraChange} != {obj1_cameraChange}\")\n",
     "                return False\n",
     "\n",
-    "        print(f\"ChangeSets overlap!\")\n",
     "        return True"
    ]
   },
