--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -1197,7 +1197,7 @@
     "    def __repr__(self):\n",
     "        return f\"CapMac -- {self.mode} {str(len(self.calibrationPts)) + ' ' if self.mode == 'calibrate' else ''}{self.state}\"\n",
     "\n",
-    "    def object_visual(self, changeSet: ChangeSet, withContours=True, margin=0):\n",
+    "    def object_visual(self, changeSet: ChangeSet, color=(255, 0, 0), withContours=True, margin=0):\n",
     "        cameras = self.cc.cameras\n",
     "        images = [change.after for change in changeSet.changeSet.values() if change.changeType not in [\"delete\", None]]\n",
     "        maxHeight =  max([im.shape[0] + margin * 2 for im in images])\n",
@@ -1214,7 +1214,7 @@
     "                        cameras[camName].mostRecentFrame.copy(),\n",
     "                        change.changeContours, \n",
     "                        -1,\n",
-    "                        (255, 0, 0),\n",
+    "                        color,\n",
     "                        -1\n",
     "                    ),\n",
     "                    0.5,\n",
